Fix Redfish to work with Terraform
